--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
   "version": "1.0.0",
   "description": "从0开始的英语语法学习",
   "main": "index.js",
-  "repository": "https://github.com/xiaoxunyao/english-note.git",
-  "author": "xiaoxunyao <huchengyea@163.com>",
+  "repository": "https://github.com/tdw-hot/english-note.git",
   "license": "MIT",
   "devDependencies": {
-    "vuepress": "^2.0.0-beta.33"
+    "vuepress": "^2.0.0-rc.2"
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   }
-    
-    
 }
