--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.67",
-    "@vuepress/theme-default": "2.0.0-beta.67",
-    "vuepress": "2.0.0-beta.67"
+    "@vuepress/bundler-vite": "^2.0.0-rc.2",
+    "@vuepress/client": "2.0.0-rc.2",
+    "@vuepress/theme-default": "2.0.0-rc.2",
+    "vuepress": "2.0.0-rc.2"
   }
-} 
+}
