--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "@vuepress/client": "2.0.0-rc.2",
     "@vuepress/theme-default": "2.0.0-rc.2",
     "vuepress": "2.0.0-rc.2"
+  },
+  "dependencies": {
+    "markdown-it": "^14.1.0"
   }
 }
